--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,8 @@
 /* ---------------------footer---------------------------------- */
 
 .copyrights__body {
+  max-width: 1100px;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
