--- a/css/style.css
+++ b/css/style.css
@@ -5,10 +5,26 @@
   min-height: 100%;
   font-family: "Roboto", sans-serif;
   overflow-x: hidden;
+  
 }
 .container {
-  max-width: 1200px;
+  max-width: 100%;
   margin: 0 auto;
+  padding: 0 20px;
+}
+@media (min-width:767px){
+.container {
+    max-width: 100%;
+    margin: 0 auto;
+    padding: 0 15px;
+}
+}
+@media (min-width:1080px){
+  .container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 0 15px;
+}
 }
 .title{
   font-weight: 500;
@@ -16,44 +32,142 @@
   line-height: 100%;
   text-align: center;
   color: #000000;
+  margin-bottom: 30px;
+}
+@media (min-width:767px){
+  .title{
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 100%;
+  text-align: center;
+  margin-bottom: 40px;
+}
+}
+@media (min-width:1080px){
+  .title{
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 100%;
+  text-align: center;
   margin-bottom: 50px;
 }
-
+}
 .text{
-    max-width: 540px;
+  max-width: 540px;
+  
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 164%;
+  color: #727272;
+}
+@media (min-width:767px){
+  .text{
+  max-width: 540px;
   font-weight: 400;
   font-size: 16px;
   line-height: 164%;
   color: #727272;
 }
+}
+@media (min-width:1080px){
+  .text{
+  max-width: 540px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 164%;
+  color: #727272;
+}
+}
 
 /* ---------------------nav---------------------------------- */
 .design__layout{
   background-color: #EEEFF1 ;
+  padding: 5px 0 30px 0;
+}
+@media (min-width:767px){
+  .design__layout{
+  padding: 30px 0 30px 0;
+}
+}
+@media (min-width:1080px){
+  .design__layout{
   padding: 79px 0 141px 0;
 }
+}
 .nav {
+  
+}
+@media (min-width:767px){
+  .nav {
+  padding:0 0 50px 0;
+}
+}
+@media (min-width:1080px){
+  .nav {
   padding:0 0 162px 0;
 }
+}
 .nav__menu {
+  
   display: flex;
-  flex: 0 1 50%;
+  justify-content: space-around;
+  padding: 10px 0px 35px;
+  flex: 0 1 100%;
   flex-wrap: wrap;
   list-style: none;
 }
+
+@media (min-width:767px){
+  .nav__menu {
+  display: flex;
+  flex: 0 1 100%;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  list-style: none;
+}
+}
+@media (min-width:1080px){
+  .nav__menu {
+  display: flex;
+  flex: 0 1 50%;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  list-style: none;
+}
+}
 .nav__menu li{
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 1.6;
+  letter-spacing: 1.2px;
+  color: #000000;
+}
+@media (min-width:767px){
+    .nav__menu li{
+  font-size: 18px;
+
+}
+}
+@media (min-width:1080px){
+  .nav__menu li{
   font-weight: 400;
   font-size: 16px;
   line-height: 164%;
   letter-spacing: 1.6px;
   color: #000000;
 }
+}
 .nav__menu li:hover{
   text-decoration: underline;
   cursor: pointer;
 }
 .nav__menu li:not(:last-child){
+  margin: 0 15px 0 0;
+}
+@media (min-width:767px){
+  .nav__menu li:not(:last-child){
   margin: 0 45px 0 0;
+}
 }
 .nav__menu li a {
   font-weight: 500;
@@ -68,20 +182,87 @@
 .design__body {
   display: flex;
   flex-direction: column;
+  flex: 0 1 100%;
+}
+@media (min-width:767px){
+  .design__body {
+  display: flex;
+  flex-direction: column;
   flex: 0 1 50%;
+}
 }
 .design__title {
   font-family: Roboto;
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 1.6;
+  text-align: center;
+  color: #000000;
+  margin-bottom: 30px;
+}
+@media (min-width:767px){
+  .design__title {
+  font-family: Roboto;
+  text-align: left;
   font-weight: 500;
   font-size: 48px;
   line-height: 164%;
   color: #000000;
   margin-bottom: 60px;
 }
+}
+@media (min-width:1080px){
+  .design__title {
+  font-family: Roboto;
+  text-align: left;
+  font-weight: 500;
+  font-size: 48px;
+  line-height: 164%;
+  color: #000000;
+  margin-bottom: 60px;
+}
+}
 .design__text {
+  margin-bottom: 35px;
+}
+@media (min-width:767px){
+  .design__text {
+  margin-bottom: 55px;
+}
+}
+@media (min-width:1080px){
+  .design__text {
   margin-bottom: 65px;
 }
+}
 .design__button {
+  align-self: center;
+  line-height: 50px;
+  padding: 0 40px;
+  background-color: #34547A;
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 18px;
+  letter-spacing: 2px;
+  text-align: center;
+  color: #FFFFFF;
+  cursor: pointer;
+}
+@media (min-width:767px){
+  .design__button {
+  align-self: flex-start;
+  line-height: 65px;
+  padding: 0 41px;
+  background-color: #34547A;
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 16px;
+  letter-spacing: 2px;
+  text-align: center;
+}
+}
+@media (min-width:1080px){
+  .design__button {
   align-self: flex-start;
   line-height: 65px;
   padding: 0 41px;
@@ -94,11 +275,21 @@
   color: #FFFFFF;
   cursor: pointer;
 }
-
+}
 /* ---------------------about---------------------------------- */
 
 .about {
+  margin: 50px 0;
+}
+@media (min-width:767px){
+  .about {
+  margin: 90px 0 75px 0;
+}
+}
+@media (min-width:1080px){
+  .about {
   margin: 112px 0 100px 0;
+}
 }
 .about__body {
   display: flex;
@@ -107,9 +298,14 @@
 }
 
 .about__text {
+  text-align: left;
+
+}
+@media (min-width:767px){
+  .about__text {
   text-align: center;
 }
-
+}
 
 /* ---------------------projects---------------------------------- */
 
@@ -121,41 +317,131 @@
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
+  gap: 29px;
+  padding: 50px 0;
+}
+@media (min-width:767px){
+  .projects__body {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 39px;
+  padding: 70px 0;
+}
+
+}
+@media (min-width:1080px){
+  .projects__body {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
   gap: 49px;
   padding: 100px 0;
 }
-
+}
 
 /* ---------------------work---------------------------------- */
 
 
 .work {
-  padding: 100px 0 100px 0;
+  padding: 50px 0;
   background-color: #EEEFF1;
+}
+@media (min-width:767px){
+  .work {
+  padding: 75px 0;
+  background-color: #EEEFF1;
+}
+}
+@media (min-width:1080px){
+  .work {
+  padding: 100px;
+  background-color: #EEEFF1;
+}
 }
 .work__body {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
+@media (min-width:1080px){
+  work__body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+}
 .work__text {
+  text-align: left;
+  margin-bottom: 37px;
+}
+@media (min-width:767px){
+  .work__text {
+  text-align: center;
+  margin-bottom: 47px;
+}
+}
+@media (min-width:1080px){
+  .work__text {
   text-align: center;
   margin-bottom: 57px;
 }
+}
 .work__content {
+  overflow: hidden;
   position: relative;
   /* background:url(/img/play-button.svg) 50% / 100px 100px no-repeat,url(/img/Rectangle-5.png) center / cover no-repeat; */
 }
+
 .work__video{
+  max-width: 100%;
+  max-height: auto;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+@media (min-width:1080px){
+  .work__video{
+  max-width: 1000px;
+  max-height: 600px;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
+}
+@media (min-width:1200px){
+  .work__video{
   max-width: 1100px;
   max-height: 600px;
   display: flex;
   justify-content: center;
   align-self: center;
 }
-
+}
 .work__play-btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -25px;
+  margin-left: -25px;
+  width: 50px;
+  height: 50px;
+  z-index: 2;
+}
+@media (min-width:767px){
+  .work__play-btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin-top: -40px;
+  margin-left: -40px;
+  width: 80px;
+  height: 80px;
+  z-index: 2;
+}
+}
+@media (min-width:1080px){
+  .work__play-btn {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -165,13 +451,36 @@
   height: 100px;
   z-index: 2;
 }
-
+}
 .work__play-btn:hover{
   cursor: pointer;
 }
 /* ---------------------footer---------------------------------- */
 
 .copyrights__body {
+  max-width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 10px 0;
+  padding: 25px 0;
+  color: #FFFFFF;
+}
+@media (min-width:767px){
+  .copyrights__body {
+  max-width: 100%;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 15px 0;
+  padding: 35px 0;
+  color: #FFFFFF;
+}
+}
+@media (min-width:1080px){
+  .copyrights__body {
   max-width: 1100px;
   margin: 0 auto;
   display: flex;
@@ -181,11 +490,12 @@
   padding: 50px 0;
   color: #FFFFFF;
 }
+}
 .copyrights__title {
   font-weight: 500;
   font-size: 21px;
 }
 .copyrights__text {
   font-weight: 400;
-  font-size: 13px;
+  font-size: 15px;
 }
