--- a/scss/main.scss
+++ b/scss/main.scss
@@ -214,9 +214,7 @@ body{
 		}
 
 		&__video {
-      width: 100%;
-      height: auto;
-      object-fit: cover;
+      max-width: 100%;
 		}
 
 		&__play-btn {
